<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BulletZoneII</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select_character">Select your Pokemon!</string>
    <string name="button_join_game">Join Game!</string>
    <string name="button_replay">Replay!</string>
    <string name="title_activity_play_game">Play Game</string>
    <string name="title_activity_replay_game">Replay Game</string>
    <string name="text_view_tank_id">Tank ID = </string>
    <string name="text_view_grid"></string>
    <string name="button_fire">Fire!</string>
    <string name="button_quit">Quit</string>
    <string name="welcome_text_view">Welcome to BulletZoneII</string>
    <string name="wall">■</string>
    <string name="test">TEST TEXT</string>

    <!-- Button String Values -->
    <string name="button_move_left">⇐</string>
    <string name="button_move_right">⇒</string>
    <string name="button_move_forward">⇑</string>
    <string name="button_move_backward">⇓</string>
    <string name="title_activity_select_character">SelectCharacter</string>
    <string name="button_.5x">.5 x Speed</string>
    <string name="button_1x">1 x Speed</string>
    <string name="button_2x">2 x Speed</string>
    <string name="button_4x">4 x Speed</string>

</resources>
